# zksync-state-reconstruct

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
abi/: IZkSyncV2.json
src/: cli.rs  constants.rs  json.rs  l1_fetcher.rs  lib.rs  main.rs  snapshot.rs  state.rs  tree.rs  types.rs
src/processor/: mod.rs
src/processor/json/: mod.rs
src/processor/snapshot/: bytecode.rs  database.rs  exporter.rs  importer.rs  mod.rs  types.rs
src/processor/tree/: mod.rs  query_tree.rs  snapshot.rs  tree_wrapper.rs
src/util/: mod.rs
state-reconstruct-fetcher/: Cargo.toml
state-reconstruct-fetcher/blobscan-client/: Cargo.toml
state-reconstruct-fetcher/blobscan-client/src/: blob_support.rs  lib.rs  scraping_support.rs
state-reconstruct-fetcher/src/: api_support.rs  blob_http_client.rs  constants.rs  database.rs  l1_fetcher.rs  lib.rs  metrics.rs  perf_metric.rs  snapshot.rs  types.rs
state-reconstruct-fetcher/src/parser/: calldata_tokens.rs  mod.rs
state-reconstruct-fetcher/src/types/: common.rs  mod.rs  v1.rs  v2.rs  v3.rs
state-reconstruct-storage/: Cargo.toml  build.rs
state-reconstruct-storage/proto/: snapshot.proto
state-reconstruct-storage/src/: lib.rs  reconstruction.rs  snapshot.rs  types.rs
state-reconstruct-utils/: Cargo.toml
state-reconstruct-utils/src/: lib.rs
