[package]
name = "state-reconstruct-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "1.0.2"
eyre = "0.6.8"
indexmap = { version = "2.0.2", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["std"] }
serde_json_any_key = "2.0.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["signal"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
