[package]
name = "state-reconstruct-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
ethers = "2.0.14"
primitive-types = "0.12.2"
serde = "1.0.204"
serde_json = "1.0.122"
zksync_storage = { git = "https://github.com/matter-labs/zksync-era.git" }

[build-dependencies]
